--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
                         </div>
 
                         <div class='col-md-10'>
-                            <h1
-                                class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
+                            <h2
+                                class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color">
                                 <b> BEST OUTCALL MASSAGE IN PATTAYA</b>
-                            </h1>
+                            </h2>
 
                             <h2
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
@@ -163,11 +163,7 @@
 
                             </h2>
 
-                            <h1
-                                class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
-                                <b> BEST OUTCALL MASSAGE SERVICES</b>
-                            </h1>
-
+                            
 
                             <a href="/gallery.html"
                                 class="page-scroll btn btn-base-color sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl ">Gallery</a>
@@ -195,7 +191,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
-                    <h1>Outcall Massage Pattaya</h1>
+                    <h1 title-underline-thick-base-color>Outcall Massage Pattaya</h1>
                     <br>
                     <p
                         class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">
