--- a/our-therapist.html
+++ b/our-therapist.html
@@ -144,7 +144,7 @@ img{
         img.zoom {
             width: 100%;
             border-radius: 5px;
-            height: 500px;
+            height: 100%;
             object-fit: cover;
             -webkit-transition: all .3s ease-in-out;
             -moz-transition: all .3s ease-in-out;
