--- a/thai-massage-pattaya.html
+++ b/thai-massage-pattaya.html
@@ -67,7 +67,7 @@
 
     <!-- Loading Bootstrap CSS -->
     
-    <link rel="icon" href="assets/images/logo/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/png">
 
     <link href="assets\css\bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap&subset=latin-ext" rel="stylesheet">
