--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </nav>
     <!-- //Navigation End -->
 
-    <section style="background: url('/assets/images/bannerimg.png');
+    <section style="background: url('/assets/images/banner.webp');
     background-size: cover; background-repeat: no-repeat;
     "class="height-100 no-padding overflow-hidden width-100 ">
     
@@ -1030,7 +1030,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div style="display:flex; justify-content: center;">
-                <img src="/assets/footer/satisfaction.png" alt="100 percent satisfaction gurantee"
+                <img src="/assets/footer/satisfaction.webp" alt="100 percent satisfaction gurantee"
                 class="img-fluid"
                 style="height: 15rem" />
                 </div>
