--- a/contact.html
+++ b/contact.html
@@ -138,8 +138,11 @@
 
 <nav class='navbar navbar-fixed-top'
     style='background-color: black; color: #fff;padding:5px;margin:0;left:0;right:0;font-size: 1.8rem;min-height: 30px;'>
-    <div class='textcc'> <span style='color: yellow;font-weight: bold;'>Book Now</span> : <a href='tel:+66-842705334'
-            style='color: #fff'><u>+66 842705334</u></a> - <a
+    <div class='textcc'> <span style='color: yellow;font-weight: bold;'>Book Now</span> :
+         <!-- <a href='tel:+66-842705334'
+            style='color: #fff'><u>+66 842705334</u></a> -->
+            
+            - <a
             href='https://api.whatsapp.com/send?phone=66842705334&text=Hi%20Sensational%20Home%20Spa!%20Please%20provide%20me%20with%20more%20information%20about%20services.'
             style='color: #fff'><i class="fa fa-whatsapp" aria-hidden="true"></i><u>whatsapp</u></a> | <a href=''
             style='color: #fff'><i class="fa fa-commenting-o" aria-hidden="true"></i><u> Line</u></a> | <a href=''
@@ -216,7 +219,7 @@
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-12 col-md-offset-2">
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-sm-6">
                             <div class="text-center">
                                 <i class="fa fa-map-marker opacity-6 text-gray title-extra-large"></i>
                                 <p
@@ -227,7 +230,7 @@
                         </div>
                         <!-- //.col-sm-4 -->
 
-                        <div class="col-sm-4">
+                        <div class="col-sm-6">
                             <div class="xs-margin-7 xs-no-margin-bottom xs-no-margin-rl text-center">
                                 <i class="fa fa-envelope-o opacity-6 text-gray title-extra-large"></i>
                                 <p
@@ -239,7 +242,7 @@
                         </div>
                         <!-- //.col-sm-4 -->
 
-                        <div class="col-sm-4">
+                        <!-- <div class="col-sm-4">
                             <div class="xs-margin-7 xs-no-margin-bottom xs-no-margin-rl text-center">
                                 <i class="fa fa-phone opacity-6 text-gray title-extra-large"></i>
                                 <p
@@ -247,8 +250,8 @@
                                     Call Us Today<br><a href='tel:+66-8842705334' style='color: #000'><u>+66 842705334</u></a>
                                 </p>
                             </div>
-                            <!-- //.xs-margin-7 -->
-                        </div>
+                    
+                        </div> -->
                         <!-- //.col-sm-4 -->
                     </div>
                     <!-- //.row -->
